# conversational-analytics-evaluation

./: .env.example  .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: metric-tests.yml  python-test.yml
agents/: looker_agent_client.py  looker_agent_http_client.py
cli/: cli.py
context/: auth.py
evals/metrics/: chart_metrics.py  dataframe_metrics.py  llm_based_metrics.py  semantic_correctness_metric.py  sql_metrics.py  text_similarity_metric.py
sample-data/: README.md
sample-data/nyc-citibike/agent/: bike_data_analyst_system_instructions.json
sample-data/nyc-citibike/model/: manifest.lkml  nyc_citibike_trips.model.lkml  stations.view.lkml  trips.view.lkml
sample-data/nyc-citibike/questions/: citibike-questions.json
tests/: test_chart_metrics.py  test_dataframe_metrics.py  test_llm_based_metrics.py  test_semantic_correctness_metric.py  test_text_similarity_metric.py
utils/: auth.py  dataset_generator.py  reporter.py
