[project]
name = "ca-api-eval"
version = "0.1.0"
description = "Conversational Analytics API Eval"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "click>=8.2.1",
    "datacompy>=0.7.3",
    "google-cloud>=0.34.0",
    "google-cloud-aiplatform[evaluation]>=1.118.0",
    "google-cloud-geminidataanalytics==0.4.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.3",
    "vertexai>=1.43.0",
    "vl-convert-python>=1.8.0",
]

[tool.setuptools]
packages = ["agents", "evals", "context", "utils"]
